# grida

./: .cursorignore  .dockerignore  .eslintignore  .eslintrc  .eslintrc.js  .gitignore  .gitmodules  .nvmrc  .oxfmtrc.jsonc  .oxlintrc.jsonc  .prettierrc  .stylelintrc  .typos.toml  AGENTS.md  ARCHITECTURE.md  AUTHORS  CHANGELOG.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  HISTORY.md  LICENSE  Makefile  README.md  SECURITY.md  babel.config.js  clippy.toml  go.mod  justfile  lefthook.yml  mise.toml  next-env.d.ts  next.config.base.js  next.config.js  nuxt.config.js  package-lock.json  package.json  pnpm-lock.yaml  (+9 more)
crates/cg/: AGENTS.md  Cargo.toml  README.md
crates/cg/benches/: bench_rectangles.rs  render_bench.rs
crates/cg/examples/: 100k.rs  basic.rs  container.rs  effects.rs  figma.rs  fonts.rs  images.rs  nested.rs  paint.rs  shapes.rs  stroke.rs  texts.rs  window.rs
crates/cg/src/: bin.rs  camera.rs  cvt.rs  demo.rs  dev.rs  draw.rs  factory.rs  font_loader.rs  image_loader.rs  io.rs  io_figma.rs  lib.rs  repository.rs  schema.rs  sk_polygon_corner_radius.rs  transform.rs  webfont_helper.rs
crates/csscascade/: ARCHITECTURE.md  CSS_PROPERTY_MAPPING.md  Cargo.toml  README.md
crates/csscascade/examples/: exp_impl_telement.rs  html2html.rs  print_rcdom.rs  print_tree.rs  resolve_and_print.rs
crates/csscascade/src/: adapter.rs  cascade.rs  dom.rs  lib.rs
crates/fonts/: Cargo.toml
crates/fonts/examples/: parse4ui.rs
crates/fonts/src/: lib.rs  parse.rs  parse_feature_params.rs  parse_ui.rs  selection.rs  serde.rs  webfonts.rs
crates/fonts/tests/: e2e_round_trip_simple_test.rs  get_faces_test.rs  get_romans_simple_test.rs  get_romans_test.rs  italic_level1.rs  italic_scenario_3_1_variable_slnt_instances.rs  italic_scenario_4_two_variable_fonts.rs  italic_scenario_level2_failures.rs  italic_scenario_level2_placeholder.rs  parse_ui_styles.rs  resolution_doc.rs  resolution_test.rs  resolution_verify.rs
crates/grida-canvas/: AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  NODEID_MIGRATION.md  README.md  package.json
crates/grida-canvas-fontgen/: Cargo.toml  README.md
crates/grida-canvas-fontgen/benches/: font_generation_bench.rs
crates/grida-canvas-fontgen/examples/: demo.rs  demo_cbdt_cblc.rs  golden_type_emoji_fontgen.rs  verify_glyph.rs
crates/grida-canvas-fontgen/src/: lib.rs
crates/grida-canvas-fonts/: AGENTS.md  Cargo.toml  README.md
crates/grida-canvas-fonts/examples/: parse4ui.rs  roboto_flex.rs  serde.rs  ttf_parser_chained_sequence_features.rs  zero_copy.rs
crates/grida-canvas-fonts/src/: lib.rs  parse.rs  parse_feature_params.rs  parse_ui.rs  selection.rs  selection_italic.rs  serde.rs  wasm_bind.rs
crates/grida-canvas-fonts/tests/: document_smart_resolution_behavior.rs  dual_api_demo.rs  e2e_round_trip_consistency_test.rs  e2e_round_trip_simple_test.rs  explore_roboto_flex.rs  features.rs  fvar.rs  get_faces_test.rs  get_italics_test.rs  get_romans_simple_test.rs  get_romans_test.rs  italic_level1.rs  italic_name_checking.rs  italic_scenario_1_one_static.rs  italic_scenario_2_many_static.rs  italic_scenario_3_1_variable_slnt_instances.rs  italic_scenario_3_one_variable_ital.rs  italic_scenario_4_two_variable_fonts.rs  italic_scenario_level2_failures.rs  parse_features.rs  parse_fvar.rs  parse_stat.rs  parse_ui.rs  parse_ui_styles.rs  scenario_1_one_static.rs  scenario_2_many_static.rs  scenario_4_two_variable_fonts.rs  scenario_level2_placeholder.rs  serde_test.rs  smart_resolution_test.rs  ui_parser_test.rs  verify_smart_resolution_behavior.rs  zero_copy.rs  zero_copy_demo.rs
crates/grida-canvas-wasm/: .gitignore  AGENTS.md  Cargo.toml  Makefile  PUBLISHING.md  README.md  emcc-wrapper.sh  index.d.ts  jest.config.ts  justfile  package.json  serve.json  tsconfig.json  tsdown.config.ts  tsup.config.ts  turbo.json  vitest.config.ts
crates/grida-canvas-wasm/.cargo/: config.toml
crates/grida-canvas-wasm/example/: demo.grida  demo.grida1  gradient.grida1  index.html  main.js  rectangle.grida  rectangle.grida1
crates/grida-canvas-wasm/lib/: api.d.ts  c-api.d.ts  grida-canvas-wasm.ts  index.ts
crates/grida-canvas-wasm/scripts/: ensure-wasm.sh  postbuild-patch-emscripten-js-glue.cjs  prebuild-patch-emscripten-js-glue.cjs
crates/grida-canvas-wasm/src/: _internal.rs  main.rs  wasm_application.rs  wasm_fonts.md  wasm_fonts.rs  wasm_markdown.rs  wasm_svg.rs  wasm_text_edit.rs
crates/grida-canvas-wasm/web/: README.md  demo.grida  index.html  main.js
crates/grida-canvas/benches/: bench_camera.rs  bench_export.rs  bench_load_scene.rs  bench_mipmap.rs  bench_pan.rs  bench_rectangles.rs  bench_viewport_culling.rs
crates/grida-canvas/examples/: 100k.rs  README_golden_arc.md  animation.rs  app_figma.rs  app_grida.rs  app_svg.rs  basic.rs  bench_100k.rs  bench_cache_picture.rs  bench_skia_primitives.rs  bench_srcset.rs  bench_tiling.rs  blendmode.rs  booleans.rs  bug_text_deocration_mode_skip_ink.rs  cache_image.rs  cache_picture.rs  cache_text_picture.rs  camera.rs  clitool_font.rs  container.rs  effects.rs  exam_node_painter.rs  figma.rs  fills.rs  fonts.rs  golden_arc.rs  golden_boolop.rs  golden_colors.rs  golden_container_stroke.rs  golden_corner_radius_backends.rs  golden_corner_smoothing.rs  golden_curve_decoration.rs  golden_fe_noise.rs  golden_font_var_wght.rs  golden_fonts.rs  golden_gradient_angular.rs  golden_gradient_diamond.rs  golden_gradient_diamond_transform.rs  golden_gradient_linear.rs  (+131 more)
crates/grida-canvas/src/: camera.rs  cvt.rs  draw.rs  factory.rs  font_loader.rs  hit_test.rs  image.rs  image_loader.rs  io.rs  (+14 more)
crates/grida-cmath/: Cargo.toml  package.json
crates/grida-dev/: AGENTS.md  Cargo.toml  README.md  TESTING.md  reftest.example.toml
crates/grida-math2/: Cargo.toml  README.md  package.json
crates/grida-text-edit/: Cargo.toml  README.md
crates/grida_editor/: Cargo.toml  README.md  TODO.md
crates/grida_wpt/: Cargo.toml  README.md
crates/math2/: Cargo.toml  LICENSE  package.json
model-v2/engine/: ANIMATION.md  Cargo.toml  DATA-MODEL.md  EFFECTIVE-VALUES.md  MEASURE.md  README.md
(+9282 files in other folders)
