[package]
name = "cg"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "dev"
path = "src/dev.rs"

[dependencies]
wasm-bindgen = "0.2.100"
skia-safe = { version = "0.86.0", features = ["gpu", "gl", "textlayout"] }
console_error_panic_hook = "0.1.7"
wee_alloc = { version = "0.4.5", optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = "0.12.19"
criterion = "0.5"
glutin = "0.32.0"
glutin-winit = "0.5.0"
raw-window-handle = "0.6.0"
gl-rs = { version = "0.14.0", package = "gl" }
winit = "0.30.0"
serde = "1.0.219"
serde_json = "1.0.140"

[features]
default = ["wee_alloc"]

[target.wasm32-unknown-emscripten]
rustflags = [
  "-s ERROR_ON_UNDEFINED_SYMBOLS=0"
]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "render_bench"
harness = false
