[package]
name = "csscascade"
version = "0.0.0"
edition = "2024"
authors = ["Grida <hello@grida.co>", "Universe <universe@grida.co>"]
description = "A modern, Rust-native CSS Cascade & Style Resolution Engine designed for building browser-like rendering pipelines"
license = "Apache-2.0"
repository = "https://github.com/gridaco/grida"
homepage = "https://grida.co"
documentation = "https://docs.rs/csscascade"
keywords = ["css", "stylesheet", "rendering", "html", "svg"]
categories = ["web-programming", "parser-implementations", "text-processing"]
readme = "README.md"
publish = true

[lib]
crate-type = ["rlib"]

[dependencies]
# css parsing
# (+2.5mb wasm32-unknown-emscripten)
stylo = "0.16"
selectors = "0.37"
stylo_dom = "0.16"
stylo_atoms = "0.16"
style_traits = { package = "stylo_traits", version = "0.16" }
url = "2.5"
euclid = "0.22.11"

# below deps are already included in stylo, this does not increase bundle size, we have them for ease of use
cssparser = "0.36.0"
html5ever = "0.36.1"
markup5ever = "0.36.1"
tendril = "0.4.3"
atomic_refcell = "0.1.13"

[lints]
workspace = true

