[package]
name = "grida-canvas-wasm"
version = "0.0.0"
license = "Apache-2.0"
description = "Grida Canvas WASM"
edition = "2021"

[dependencies]
cg = { path = "../grida-canvas", features = ["web"] }
math2 = { path = "../math2" }
serde_json="1.0.140"
fonts = { path = "../grida-canvas-fonts", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

[features]
default = []
