[package]
name = "cg"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# skia
skia-safe = { version = "0.91.0", features = [
  "gpu",
  "gl",
  "textlayout",
  "pdf",
  "svg",
  "webp",
] }
gl = "0.14.0"

# io
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json-patch = "4.1.0"
flatbuffers = "25.9.23"

# text editing
grida-text-edit = { path = "../grida-text-edit" }

# geo
math2 = { path = "../math2" }
rstar = "0.12"

# core resource hashing
seahash = "4.1.0"
# layout engine
taffy = "0.9.1"
# svg parsing
# (+2mb wasm32-unknown-emscripten@opt-level=3)
usvg = { path = "../../third_party/usvg" }
# markdown parsing
# (+0.25mb wasm32-unknown-emscripten@opt-level=3)
pulldown-cmark = "0.13.0"

# toolings
async-trait = "0.1"
futures = "0.3.31"

# testing
# (+3mb@opt-level=3 +1.7mb@opt-level=z wasm32-unknown-emscripten)
figma-api = { version = "0.31.4", optional = true }

# native GL context creation (headless GPU rendering, CLI, SDK)
glutin = { version = "0.32.0", optional = true }
raw-window-handle = { version = "0.6.0", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = "0.12.19"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[features]
default = []
figma = ["figma-api"]
web = []
native-clock-tick = []
native-gl-context = ["dep:glutin", "dep:raw-window-handle"]

[dev-dependencies]
criterion = "0.5"
clap = { version = "4.5.39", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rendiff = "0.2"
imgref = "1.10"

[[bench]]
name = "bench_rectangles"
harness = false

[[bench]]
name = "bench_mipmap"
harness = false

[[bench]]
name = "bench_viewport_culling"
harness = false

[[example]]
name = "headless_gpu"
required-features = ["native-gl-context"]

