[package]
name = "grida-dev"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"
description = "Native winit playground for grida-canvas scenes."

[dependencies]
cg = { path = "../grida-canvas", features = ["figma", "web", "native-clock-tick"] }
math2 = { path = "../math2" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
futures = "0.3"
gl = "0.14.0"
glutin = "0.32.0"
glutin-winit = "0.5.0"
raw-window-handle = "0.6.0"
winit = "0.30.0"
skia-safe = { version = "0.89.0", features = ["gpu", "gl", "textlayout"] }
figma-api = "0.31.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
dify = "0.6"
indicatif = "0.17"

