
[package]
name = "math2"
version = "0.0.1"
edition = "2024"
description = "Unopinionated canvas math utilities"
license = "Apache-2.0"
repository = "https://github.com/gridaco/grida"
homepage = "https://grida.co"
keywords = ["canvas", "math", "geometry"]
categories = ["graphics", "data-structures"]
authors = ["Grida"]

[lib]
crate-type = ["cdylib", "rlib"]
