[package]
name = "grida_editor"
version = "0.0.0"
edition = "2024"
publish = false
description = "Grida editor core — document working copy, invertible mutations, history, commands. Reference implementation of docs/wg/canvas."

[dependencies]
grida = { path = "../grida" }
math2 = { path = "../math2" }

# Wire encoding of the mutation vocabulary (src/wire.rs) — DOC-3 made
# literal: mutations are serializable data. Versions match crates/grida.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Shell-only (feature "shell"): window host deps, versions matched to
# crates/grida_dev (the prior-art winit host) so the workspace resolves
# one copy of each.
winit = { version = "0.30.0", optional = true }
glutin = { version = "0.32.0", optional = true }
glutin-winit = { version = "0.5.0", optional = true }
raw-window-handle = { version = "0.6.0", optional = true }
gl = { version = "0.14.0", optional = true }
skia-safe = { version = "0.93.1", features = [
  "gpu",
  "gl",
  "textlayout",
  "pdf",
  "svg",
  "webp",
], optional = true }
futures = { version = "0.3", optional = true }
# System clipboard (IO-5 cross-instance copy/paste) — shell-only, at
# grida_dev's version.
arboard = { version = "3", optional = true }
# Native application menu bar (menu.md "The application menu",
# `MENU-*`). The Tauri team's framework-agnostic menu crate; integrates
# with the winit event loop via `raw-window-handle`. Shell-only.
muda = { version = "0.19", optional = true }

[dev-dependencies]
# Pixel readback in the frame conformance suite (FRAME-1/FRAME-3):
# reading the headless raster surface the tests paint into. Version
# and features match crates/grida so cargo unifies one skia build.
skia-safe = { version = "0.93.1", features = [
  "gpu",
  "gl",
  "textlayout",
  "pdf",
  "svg",
  "webp",
] }

[features]
# Windowed shell (docs/shell.md). The core stays
# dependency-light: everything below is shell-only.
shell = [
  "dep:winit",
  "dep:glutin",
  "dep:glutin-winit",
  "dep:raw-window-handle",
  "dep:gl",
  "dep:skia-safe",
  "dep:futures",
  "dep:arboard",
  "dep:muda",
]

[[bin]]
name = "grida_editor"
path = "src/bin/editor.rs"
required-features = ["shell"]

[lints]
workspace = true
