
[package]
name = "math2"
version = "0.0.2"
edition = "2021"
description = "Geometry, layout and rasterization utilities powering the Grida canvas"
license = "MIT"
repository = "https://github.com/gridaco/grida"
homepage = "https://grida.co"
keywords = ["canvas", "geometry", "layout", "rasterization", "bezier"]
categories = ["algorithms", "graphics", "mathematics", "data-structures"]
authors = ["Grida"]

[features]
serde = ["dep:serde"]

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
