[package]
name = "anchor-lab"
version = "0.0.0"
edition = "2021"
publish = false

# Standalone on purpose: this crate is the model-v2 `anchor` proving lab.
# It is NOT a member of the repo workspace (see model-v2/a/README.md —
# experiment code is promoted into crates/ only at phase 4).
[workspace]

[dependencies]
taffy = "0.9.2"
quick-xml = "0.37"

[profile.release]
debug = true
