[package]
name = "anchor-lab"
version = "0.0.0"
edition = "2021"
publish = false

# Standalone on purpose: this crate is the model-v2 `anchor` proving lab.
# It is NOT a member of the repo workspace (see model-v2/a/README.md —
# experiment code is promoted into crates/ only at phase 4).
[workspace]

[features]
# `serde` (default OFF) makes `Op` / `ResizeDrag` / `Axis` serializable — the
# op-log wire for engine replay. Kept optional so the default lab pulls only
# taffy + quick-xml (the model crate stays dependency-lean).
serde = ["dep:serde"]

[dependencies]
taffy = "0.9.2"
quick-xml = "0.37"
serde = { version = "1.0", optional = true, features = ["derive"] }

[profile.release]
debug = true
